--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -633,6 +633,14 @@ video {
 	font-size: 0.875rem;
 	line-height: 1.25rem;
 }
+.text-4xl {
+	font-size: 2.25rem;
+	line-height: 2.5rem;
+}
+.text-2xl {
+	font-size: 1.5rem;
+	line-height: 2rem;
+}
 .font-bold {
 	font-weight: 700;
 }
@@ -682,6 +690,10 @@ video {
 .text-green-500 {
 	--tw-text-opacity: 1;
 	color: rgba(16, 185, 129, var(--tw-text-opacity));
+}
+.text-green-800 {
+	--tw-text-opacity: 1;
+	color: rgba(6, 95, 70, var(--tw-text-opacity));
 }
 .placeholder-gray-500::placeholder {
 	--tw-placeholder-opacity: 1;
