--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -429,7 +429,7 @@ textarea {
 input::placeholder,
 textarea::placeholder {
   opacity: 1;
-  color: #9ca3af;
+  color: #a3a3a3;
 }
 
 button,
@@ -554,6 +554,11 @@ video {
 [hidden] {
   display: none;
 }
+
+*, ::before, ::after {
+	--tw-border-opacity: 1;
+	border-color: rgba(229, 229, 229, var(--tw-border-opacity));
+}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -562,8 +567,27 @@ video {
 	margin-top: 1rem;
 	margin-bottom: 1rem;
 }
+.mx-8 {
+	margin-left: 2rem;
+	margin-right: 2rem;
+}
+.mb-10 {
+	margin-bottom: 2.5rem;
+}
 .mb-3 {
 	margin-bottom: 0.75rem;
+}
+.mt-32 {
+	margin-top: 8rem;
+}
+.mr-8 {
+	margin-right: 2rem;
+}
+.mt-16 {
+	margin-top: 4rem;
+}
+.mb-4 {
+	margin-bottom: 1rem;
 }
 .flex {
 	display: flex;
@@ -571,14 +595,26 @@ video {
 .h-screen {
 	height: 100vh;
 }
-.w-3\/5 {
-	width: 60%;
-}
 .w-full {
 	width: 100%;
 }
+.w-3\/5 {
+	width: 60%;
+}
+.w-1\/3 {
+	width: 33.333333%;
+}
+.w-1\/2 {
+	width: 50%;
+}
+.w-3\/4 {
+	width: 75%;
+}
 .flex-1 {
 	flex: 1 1 0%;
+}
+.flex-grow {
+	flex-grow: 1;
 }
 .flex-col {
 	flex-direction: column;
@@ -592,20 +628,41 @@ video {
 .justify-center {
 	justify-content: center;
 }
+.justify-between {
+	justify-content: space-between;
+}
 .rounded-md {
 	border-radius: 0.375rem;
 }
-.bg-purple-600 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
+.rounded-full {
+	border-radius: 9999px;
+}
+.border-2 {
+	border-width: 2px;
 }
 .bg-red-500 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
+	background-color: rgba(244, 63, 94, var(--tw-bg-opacity));
 }
-.bg-purple-100 {
+.bg-pink-100 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(237, 233, 254, var(--tw-bg-opacity));
+	background-color: rgba(252, 231, 243, var(--tw-bg-opacity));
+}
+.bg-brand {
+	--tw-bg-opacity: 1;
+	background-color: rgba(24, 56, 208, var(--tw-bg-opacity));
+}
+.bg-pink-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(236, 72, 153, var(--tw-bg-opacity));
+}
+.bg-blue-50 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(239, 246, 255, var(--tw-bg-opacity));
+}
+.bg-pink-50 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(253, 242, 248, var(--tw-bg-opacity));
 }
 .p-8 {
 	padding: 2rem;
@@ -618,42 +675,58 @@ video {
 	padding-left: 1rem;
 	padding-right: 1rem;
 }
-.pr-2 {
+.px-8 {
+	padding-left: 2rem;
+	padding-right: 2rem;
+}
+.py-4 {
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+}
+.px-32 {
+	padding-left: 8rem;
+	padding-right: 8rem;
+}
+.px-3 {
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
+}
+.px-2 {
+	padding-left: 0.5rem;
 	padding-right: 0.5rem;
 }
-.text-3xl {
-	font-size: 1.875rem;
-	line-height: 2.25rem;
+.py-3 {
+	padding-top: 0.75rem;
+	padding-bottom: 0.75rem;
+}
+.pr-2 {
+	padding-right: 0.5rem;
 }
 .text-base {
 	font-size: 1rem;
 	line-height: 1.5rem;
 }
-.text-sm {
-	font-size: 0.875rem;
-	line-height: 1.25rem;
-}
-.text-4xl {
-	font-size: 2.25rem;
-	line-height: 2.5rem;
-}
 .text-2xl {
 	font-size: 1.5rem;
 	line-height: 2rem;
 }
-.font-bold {
-	font-weight: 700;
+.text-sm {
+	font-size: 0.875rem;
+	line-height: 1.25rem;
+}
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem;
+}
+.text-xs {
+	font-size: 0.75rem;
+	line-height: 1rem;
 }
 .font-medium {
 	font-weight: 500;
 }
-.text-purple-50 {
-	--tw-text-opacity: 1;
-	color: rgba(245, 243, 255, var(--tw-text-opacity));
-}
-.text-purple-300 {
-	--tw-text-opacity: 1;
-	color: rgba(196, 181, 253, var(--tw-text-opacity));
+.font-bold {
+	font-weight: 700;
 }
 .text-white {
 	--tw-text-opacity: 1;
@@ -661,53 +734,115 @@ video {
 }
 .text-gray-400 {
 	--tw-text-opacity: 1;
-	color: rgba(156, 163, 175, var(--tw-text-opacity));
+	color: rgba(163, 163, 163, var(--tw-text-opacity));
 }
 .text-gray-700 {
 	--tw-text-opacity: 1;
-	color: rgba(55, 65, 81, var(--tw-text-opacity));
+	color: rgba(64, 64, 64, var(--tw-text-opacity));
 }
 .text-gray-500 {
 	--tw-text-opacity: 1;
-	color: rgba(107, 114, 128, var(--tw-text-opacity));
-}
-.text-green-400 {
-	--tw-text-opacity: 1;
-	color: rgba(52, 211, 153, var(--tw-text-opacity));
-}
-.text-green-600 {
-	--tw-text-opacity: 1;
-	color: rgba(5, 150, 105, var(--tw-text-opacity));
-}
-.text-green-900 {
-	--tw-text-opacity: 1;
-	color: rgba(6, 78, 59, var(--tw-text-opacity));
-}
-.text-green-100 {
-	--tw-text-opacity: 1;
-	color: rgba(209, 250, 229, var(--tw-text-opacity));
+	color: rgba(115, 115, 115, var(--tw-text-opacity));
 }
 .text-green-500 {
 	--tw-text-opacity: 1;
-	color: rgba(16, 185, 129, var(--tw-text-opacity));
+	color: rgba(34, 197, 94, var(--tw-text-opacity));
 }
-.text-green-800 {
+.text-blue-50 {
 	--tw-text-opacity: 1;
-	color: rgba(6, 95, 70, var(--tw-text-opacity));
+	color: rgba(239, 246, 255, var(--tw-text-opacity));
+}
+.text-blue-300 {
+	--tw-text-opacity: 1;
+	color: rgba(147, 197, 253, var(--tw-text-opacity));
+}
+.text-pink-50 {
+	--tw-text-opacity: 1;
+	color: rgba(253, 242, 248, var(--tw-text-opacity));
+}
+.text-blue-500 {
+	--tw-text-opacity: 1;
+	color: rgba(59, 130, 246, var(--tw-text-opacity));
+}
+.text-blue-800 {
+	--tw-text-opacity: 1;
+	color: rgba(30, 64, 175, var(--tw-text-opacity));
+}
+.text-pink-100 {
+	--tw-text-opacity: 1;
+	color: rgba(252, 231, 243, var(--tw-text-opacity));
+}
+.text-gray-800 {
+	--tw-text-opacity: 1;
+	color: rgba(38, 38, 38, var(--tw-text-opacity));
+}
+.underline {
+	text-decoration: underline;
 }
 .placeholder-gray-500::placeholder {
 	--tw-placeholder-opacity: 1;
-	color: rgba(107, 114, 128, var(--tw-placeholder-opacity));
+	color: rgba(115, 115, 115, var(--tw-placeholder-opacity));
 }
-.placeholder-purple-400::placeholder {
+.placeholder-pink-600::placeholder {
 	--tw-placeholder-opacity: 1;
-	color: rgba(167, 139, 250, var(--tw-placeholder-opacity));
+	color: rgba(219, 39, 119, var(--tw-placeholder-opacity));
+}
+.placeholder-pink-300::placeholder {
+	--tw-placeholder-opacity: 1;
+	color: rgba(249, 168, 212, var(--tw-placeholder-opacity));
 }
 .hover\:bg-red-600:hover {
 	--tw-bg-opacity: 1;
-	background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
+	background-color: rgba(225, 29, 72, var(--tw-bg-opacity));
+}
+.disabled\:cursor-not-allowed:disabled {
+	cursor: not-allowed;
+}
+.disabled\:bg-pink-200:disabled {
+	--tw-bg-opacity: 1;
+	background-color: rgba(251, 207, 232, var(--tw-bg-opacity));
+}
+.disabled\:bg-pink-300:disabled {
+	--tw-bg-opacity: 1;
+	background-color: rgba(249, 168, 212, var(--tw-bg-opacity));
+}
+.disabled\:bg-pink-100:disabled {
+	--tw-bg-opacity: 1;
+	background-color: rgba(252, 231, 243, var(--tw-bg-opacity));
+}
+.disabled\:text-pink-600:disabled {
+	--tw-text-opacity: 1;
+	color: rgba(219, 39, 119, var(--tw-text-opacity));
+}
+.disabled\:text-pink-400:disabled {
+	--tw-text-opacity: 1;
+	color: rgba(244, 114, 182, var(--tw-text-opacity));
+}
+.disabled\:text-pink-300:disabled {
+	--tw-text-opacity: 1;
+	color: rgba(249, 168, 212, var(--tw-text-opacity));
 }
 @media (min-width: 640px) {
+
+	.sm\:mx-32 {
+		margin-left: 8rem;
+		margin-right: 8rem;
+	}
+
+	.sm\:mx-40 {
+		margin-left: 10rem;
+		margin-right: 10rem;
+	}
+
+	.sm\:mx-80 {
+		margin-left: 20rem;
+		margin-right: 20rem;
+	}
+
+	.sm\:mx-60 {
+		margin-left: 15rem;
+		margin-right: 15rem;
+	}
 
 	.sm\:flex {
 		display: flex;
@@ -715,5 +850,22 @@ video {
 
 	.sm\:w-1\/2 {
 		width: 50%;
+	}
+
+	.sm\:w-1\/3 {
+		width: 33.333333%;
+	}
+
+	.sm\:w-1\/5 {
+		width: 20%;
+	}
+
+	.sm\:w-3\/4 {
+		width: 75%;
+	}
+
+	.sm\:px-32 {
+		padding-left: 8rem;
+		padding-right: 8rem;
 	}
 }
